# zfp

./: CMakeLists.txt  appveyor.yml
array/: zfparray.h  zfparray1.h  zfparray2.h  zfparray3.h  zfputils.h
array/zfp/: memory.h
cfp/include/: cfparray1d.h  cfparray1f.h  cfparray2d.h  cfparray2f.h  cfparray3d.h  cfparray3f.h
cfp/src/: cfparray1d.cpp  cfparray1f.cpp  cfparray2d.cpp  cfparray2f.cpp  cfparray3d.cpp  cfparray3f.cpp  cfparray_source.cpp
include/: zfp.h
src/: CMakeLists.txt  zfp.c
src/inline/: bitstream.c
src/share/: parallel.c
src/template/: compress.c  decompress.c  ompcompress.c
tests/: CMakeLists.txt  Makefile
tests/array/: testArray1d.cpp  testArray1f.cpp  testArray2d.cpp  testArray2f.cpp  testArray3d.cpp  testArray3f.cpp  testArrayBase.cpp
tests/cfp/: CMakeLists.txt  testCfpArray1d.c  testCfpArray1f.c  testCfpArray2_source.c  testCfpArray2d.c  testCfpArray2f.c  testCfpArray3_source.c  testCfpArray3d.c  testCfpArray3f.c  testCfpArray_source.c
utils/: zfp.c
